[minor/css] fix bug on Mozilla br.spacer not displaying extra spaces.
git-svn-id: https://subversion.renater.fr/wimsdev/trunk@10890 b48fb02d-6135-0410-b1dd-deb767c81da9

--- a/wims/public_html/themes/_css/utilities.css
+++ b/wims/public_html/themes/_css/utilities.css
@@ -37,11 +37,13 @@ ul.inline, ol.inline{padding-left:0;}
 
 .wims_nopuce {list-style-type:none}
 
-/* use .spacer on <br/> or <div> to add extra spaces */
+/* use .spacer on <div> to add extra spaces */
 .spacer{
   content: " ";
   display: block;
-  padding: .6em;
+  padding-top: .6em;
+  /* on Mozilla, only margin is taken on <br> */
+  margin-bottom: .6em;
 }
 
 /* default for audio */
